# forge

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  commands.md  docker-compose.yml  tmp_plan.json  tmp_plan_o001.json
.ai/: RULES.md  (+9 more)
forge-api/: .dockerignore  Dockerfile  pyproject.toml
forge-api/app/: auth.py  config.py  contract_validation.py  dependencies.py  events.py  main.py
forge-api/migrations/: 001_initial_schema.sql  002_junction_tables.sql  003_indexes.sql  004_objectives_overhaul.sql  005_skills.sql  006_workflows.sql  migrate.py  rollback_004.sql  rollback_005.sql  rollback_006.sql
forge-api/scripts/: migrate_skills.py
platform/: Dockerfile  IMPLEMENTATION_TRACKER.md  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  localhost-05v2-task-deliverable.html  localhost-8062.html  pyproject.toml
platform/alembic/: env.py
platform/app/: config.py  database.py  main.py
platform/docs/: AGENT_TASK_COMPREHENSIVE_PLAN.md  AUTONOMOUS_AGENT_FAILURE_MODES.md  CHANGE_PLAN.md  CHANGE_PLAN_COMPREHENSIVE.md  CHANGE_PLAN_v2.md  DEEP_RISK_REGISTER.md  EPISTEMIC_CONTINUITY_ASSESSMENT.md  FIRST_PR_NOTES.md  FORMAL_PROPERTIES_v2.md  FRAMEWORK_MAPPING.md  GAP_ANALYSIS_v2.md  INDEX.md  INTEGRATIONS.md  MASTER_IMPLEMENTATION_PLAN.md  MVP_SCOPE.md  OPERATIONS.md  PHASE0_DEPENDENCY_GRAPH.md  PLAN_ADR_GATE_PIPELINE.md  PLAN_CONTRACT_DISCIPLINE.md  PLAN_GATE_ENGINE.md  PLAN_GOVERNANCE.md  PLAN_LLM_ORCHESTRATION.md  PLAN_MEMORY_CONTEXT.md  PLAN_PHASE1_UX_INTEGRATION.md  PLAN_PRE_FLIGHT.md  PLAN_QUALITY_ASSURANCE.md  PRODUCT_VISION.md  QUALITY_EVALUATION.md  README.md  ROADMAP.md  SESSION_STATE.md  THEOREM_VERIFICATION_AIOS_AISDLC.md  USAGE_PROCESS.md  USAGE_PROCESS_GRAPH.dot  UX_DESIGN.md
platform/mcp_server/: server.py
platform/scripts/: audit_kill_criteria.py  backfill_causal_edges.py  backup.sh  loadtest.js  restore.sh  smoke_test_tracker.py  validate_adr.py  validate_adr_lifecycle.py  validate_migration.py  validate_migration_cycle.py  verify_graph_topology.py
platform/seed/: seed_data.py
platform/tests/: conftest.py  conftest_populated.py  test_acyclicity.py  test_adr_exporter.py  test_ai_sidebar.py  test_ai_sidebar_ui.py  test_audit_view.py  test_autonomy.py  test_causal_graph.py  test_chunks_ac_af.py  test_chunks_ap_ar.py  test_context_budget.py  test_context_projector.py  test_contract_schema.py  test_contract_validator_gates.py  test_cost_tracker.py  test_coverage_analyzer.py  test_csrf_middleware.py  test_dashboard_view.py  test_data_retention.py  test_db_edge_source.py  test_evidence_link_rule.py  test_evidence_set_model.py  test_failure_recovery.py  test_gate_registry.py  test_gdpr_export.py  test_git_verify_trailer.py  test_github_pr.py  test_graceful_shutdown.py  test_handoff_exporter.py  (+67 more)
(+914 files in other folders)
