[project]
name = "forge-platform"
version = "0.1.0"
description = "Forge Platform MVP — meta-prompting engine for AI-driven software development"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.35",   # < 2.0.35 crashes on Python 3.13 (D-13 fix)
    "alembic>=1.14",
    "psycopg2-binary>=2.9",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.9",
    "prometheus-client>=0.20",  # /metrics endpoint (decision #1 A)
    # OpenTelemetry tracing (decision #2 A). Opt-in at runtime via
    # FORGE_OTEL_ENABLED=true; deps are installed always so the
    # env-flip path is one-line, not a dep-add operation.
    "opentelemetry-api>=1.28",
    "opentelemetry-sdk>=1.28",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.49b0",
    "opentelemetry-exporter-otlp>=1.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 120
target-version = "py311"
